# Plated

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docker-publish.yml  docs-deploy.yml
deployment/: index.html
docker/: .env.example  DEPLOYMENT_SUMMARY.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
docs/: deployment.md  features.md  index.md  internationalization.md  test-view-server.md
docs/installation/: docker.md  native.md
features/: index.html
installation/docker/: index.html
installation/native/: index.html
internationalization/: index.html
issues/: 002.md  004.md  006.md
search/: search_index.json
src/: recipe.typ
src/config/: settings.py  urls.py
src/locale/de/LC_MESSAGES/: django.mo  django.po
src/plated/: __init__.py  run.py
src/plated/config/: settings.py  urls.py
src/plated/recipes/: admin.py  context_processors.py  forms.py  middleware.py  models.py  testviews_urls.py  urls.py
src/plated/recipes/migrations/: 0002_aisettings.py  0004_mealplan_mealplanentry.py  0007_alter_step_content.py  0008_alter_usersettings_language.py  0009_alter_recipe_url.py  0010_usersettings_locale.py
src/plated/recipes/schemas/: __init__.py  json_schema.py  serializers.py  types.py  validators.py
src/plated/recipes/services/: __init__.py  ai_service.py  base.py  export_service.py  formset_service.py  json_format.py  meal_plan_service.py  mock_formats.py  property_service.py  recipe_service.py  registry.py  tandoor_format.py  typst_service.py
src/plated/recipes/templatetags/: recipe_filters.py
src/plated/recipes/tests/: __init__.py  test_api.py  test_forms.py  test_import.py  test_models.py  test_pdf_generation.py  test_services_meal_plan.py  test_services_typst.py  test_urls_testviews.py  test_views_meal_plans.py  test_views_recipes.py  test_views_testviews.py
src/plated/recipes/typst/: collection.typ  meal_plan.typ  recipe.typ  (+1 more)
src/plated/static/: cooking-view.js  manifest.json  service-worker.js  styles.css
src/plated/templates/: about.html  base.html
src/recipes/: admin.py  context_processors.py  forms.py  middleware.py  models.py  schema.py  tests.py  urls.py  views.py
src/recipes/migrations/: 0001_initial.py  0002_aisettings.py  0003_alter_aisettings_api_key.py  0004_mealplan_mealplanentry.py  0005_aijob_aisettings_timeout.py  0006_usersettings.py
src/recipes/services/: json_format.py  mock_formats.py
src/recipes/views/: __init__.py  ai.py  collections.py  jobs.py  meal_plans.py  properties.py  recipes.py  settings.py
src/static/: dynamic-formset.js  manifest.json  pwa-install.js  recipe-scaler.js  service-worker.js  styles.css  theme-switcher.js
src/templates/: base.html
src/templates/recipes/: ai_extract.html  collection_confirm_delete.html  collection_detail.html  collection_form.html  collection_list.html  job_detail.html  jobs_list.html  manage_ingredient_names.html  manage_keywords.html  manage_units.html  meal_plan_confirm_delete.html  meal_plan_detail.html  meal_plan_form.html  meal_plan_list.html  recipe_confirm_delete.html  recipe_detail.html  recipe_form.html  recipe_import.html  recipe_list.html  recipes_by_property.html  rename_ingredient_name.html  rename_keyword.html  rename_unit.html  settings.html  shopping_list.html
test-view-server/: index.html
(+37 files in other folders)
