[project]
name = "plated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Vollmer", email = "av3@mailbox.org" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "pillow>=12.0.0",
]

[project.scripts]
plated = "plated:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.5",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint.per-file-ignores]
"seed_db.py" = ["E501"]
