[project]
name = "plated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Vollmer", email = "av3@mailbox.org" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]

[project.scripts]
plated = "plated:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.5",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/*.py" = ["E501"]
"*/management/commands/seed_db.py" = ["E501"]
